widget jumping fixes

--- a/src/scss/page/main/settings.scss
+++ b/src/scss/page/main/settings.scss
@@ -165,7 +165,7 @@
                 .placeholder { z-index: 0; }
             }
 
-            .membersCounter { color: var(--color-text-secondary); }
+            .label { color: var(--color-text-secondary); }
         }
         .spaceHeader:hover,
         .spaceHeader.isEditing {
